// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > *:first-of-type {
  margin-right: 0.5rem;
}

.emotion-2 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #D3D4DD;
  background: #F0F0F5;
  color: #0069D0;
  font-weight: bold;
}

.emotion-0 {
  pointer-events: none;
  font-size: 1rem;
  line-height: 1;
}

.emotion-0:after {
  -webkit-animation: animation-0 450ms infinite linear;
  animation: animation-0 450ms infinite linear;
  border: 2px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  content: "";
  display: inline-block;
  height: 1rem;
  width: 1rem;
}

<div>
  <table>
    <tbody>
      <tr
        class="emotion-3"
      >
        <td
          class="emotion-2"
          colspan="3"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            />
            Carregando resultados
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should render correctly 2`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > *:first-of-type {
  margin-right: 0.5rem;
}

.emotion-2 {
  text-align: left;
  padding: 0 1rem;
  height: 2.5rem;
  border-bottom: 1px solid #D3D4DD;
  background: #F0F0F5;
  color: #0069D0;
  font-weight: bold;
}

.emotion-0 {
  pointer-events: none;
  font-size: 1rem;
  line-height: 1;
}

.emotion-0:after {
  -webkit-animation: animation-0 450ms infinite linear;
  animation: animation-0 450ms infinite linear;
  border: 2px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  content: "";
  display: inline-block;
  height: 1rem;
  width: 1rem;
}

<div>
  <table>
    <tbody>
      <tr
        class="emotion-3"
      >
        <td
          class="emotion-2"
          colspan="2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            />
            Loading...
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
